Fixed the font on the 'About the College' page

--- a/style.css
+++ b/style.css
@@ -6869,6 +6869,7 @@ h6.caps {
 
 div#content .main p {
 	margin-top: 0.7em;
+	font-family: 'Public Sans', Arial, sans-serif;
 }
 
 i.icon.byu-icon-arrow-long, i.icon.byu-icon-news {
