test to see if i know how to use git or not

--- a/style.css
+++ b/style.css
@@ -6852,6 +6852,8 @@ aside#colophon a.fa {
 	margin: 0.2em;
 }
 
+/* hello friend */
+
 /***********************/
 /*  ABOUT THE COLLEGE  */
 /***********************/
