--- a/style.css
+++ b/style.css
@@ -6716,6 +6716,8 @@ div#content a.lp-box-readmore, div#content a.staticslider-button, div#content a.
 	color: white;
 	text-decoration: none;
 	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
+	background-color: #0062B8;
+	font-weight: 700;
 }
 
 div#content a.lp-box-readmore {
