Fixed color for category search on directory page

--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -67,7 +67,7 @@
     top: 1.25em;
 }
 .filter-container ul {
-    background: #b3b1a9;
+    background: #8f8f8f;
     max-width: 320px;
     color: white;
     font-weight: bold;
