Fixed the hover color on the menu items

--- a/style.css
+++ b/style.css
@@ -6589,7 +6589,7 @@ a.lp-box-readmore {
 }
 
 nav#humanities-menu li:hover {
-	background-color: #E6E6E6;
+	background-color: #fafafa;
 }
 
 .home .entry-title {
