--- a/style.css
+++ b/style.css
@@ -6983,6 +6983,8 @@ form.searchform:hover {
 #humanities-menu ul li.current-menu-parent a,
 #humanities-menu ul li a:hover {}
 
+/*Here to set the default image for profiles*/
+
 .defaultIMG {background-image: url("../../uploads/default_logo-hum.png");}
 
 /* FIN! */
