fixes for default image on departments page. Changes in register.php. I forgot to switch to the taxDefaultImg branch so I'm commiting with the taxonomy branch

--- a/style.css
+++ b/style.css
@@ -6983,4 +6983,8 @@ form.searchform:hover {
 #humanities-menu ul li.current-menu-parent a,
 #humanities-menu ul li a:hover {}
 
+.defaultIMG{
+	background-image: url("../../uploads/default_logo-hum.png");
+}
+
 /* FIN! */
