--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -216,8 +216,17 @@
   border-width: 4px;
   border-style: solid;
 } */
-.link.phone {
+.directory ul.directory-list li .content .link.phone {
     color: #0062B8;
+}
+
+.directory-list .filterable-item .content h5 {
+	color: #333;
+	font-size: 17px;
+    line-height: 1.23529412;
+    font-weight: 405;
+	margin: 0;
+	font-weight: 500;
 }
 
 .directory ul.directory-list li .content {
@@ -232,6 +241,7 @@
 }
 .directory ul.directory-list li .content h4 {
     text-transform: none;
+    font-size: 24px;
     font-weight: bold;
     margin: 0;
     font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
@@ -244,9 +254,11 @@
 }
 .directory ul.directory-list li .content .link {
     font-size: 16px;
+    color: #666;
     display: inline-block;
     padding: 0;
     position: relative;
+    font-weight: 500;
 }
 .directory ul.directory-list li .content .link:first-of-type {
     padding-left: 0;
