Changed location of the default image

--- a/style.css
+++ b/style.css
@@ -7038,7 +7038,7 @@ div#content .elementor-text-editor a {
 
 
 .defaultIMG{
-	background-image: url("../../uploads/default_logo-hum.png");
+	background-image: url("resources/images/default_logo-hum.png");
 	background-size: 100% 100%;
 }
 
