--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -25,7 +25,25 @@ ul.directory-list.filterable {
 	position: relative;
 	grid-template-columns: repeat(3,minmax(1px,1fr));
 	grid-gap: 35px 10px;
-	padding: 50px;
+	padding: 50px 120px;
+}
+@media(max-width:1250px) {
+    ul.directory-list.filterable {
+        display: grid;
+	position: relative;
+	grid-template-columns: repeat(2,minmax(1px,1fr));
+	grid-gap: 35px 10px;
+	padding: 50px 120px;
+    }
+}
+@media(max-width:975px) {
+    ul.directory-list.filterable {
+        display: grid;
+	position: relative;
+	grid-template-columns: repeat(1,minmax(1px,1fr));
+	grid-gap: 35px 10px;
+	padding: 50px 120px;
+    }
 }
 .statusfilter-container .current {
     text-decoration: underline;
@@ -191,11 +209,9 @@ ul.directory-list.filterable {
 }
 .directory ul.directory-list li {
     color: #8f8f8f;
-    /* width: 100%;
-    margin-bottom: 10px; */
     display: table;
     display: grid;
-    grid-template-columns: 95px 155px;
+    grid-template-columns: 100px 165px;
 }
 @media all and (max-width: 699px) {
     .directory ul.directory-list li {
