--- a/style.css
+++ b/style.css
@@ -1621,16 +1621,16 @@ img#wpstats {
 	margin: 0;
 }
 
-.entry-title {
+h1.entry-title {
 	margin: 0;
-	padding: .3em 0 .1em;
+	padding: 60px 0px;
 	font-weight: 400;
 	line-height: 1.3;
 	word-wrap: break-word;
-}
-
-.entry-title.singular-title {
-	padding-top: .5em;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 4px;
 }
 
 .entry-title a {
@@ -1647,10 +1647,6 @@ img#wpstats {
 
 .main #comments-title {
 	margin: 0;
-}
-
-.main .entry-title {
-	margin: 0 1.5em 0 0;
 }
 
 /*--------------------------------------------------------------
@@ -7078,4 +7074,5 @@ ul#research a{
 	text-decoration: underline; 
 	color: #0062B8
 }
+
 /* FIN! */
