--- a/style.css
+++ b/style.css
@@ -1622,15 +1622,16 @@ img#wpstats {
 }
 
 h1.entry-title {
-	margin: 0;
-	padding: 60px 0px;
+	margin: 0vw -50vw;
 	font-weight: 400;
 	line-height: 1.3;
 	word-wrap: break-word;
 	text-align: center;
 	text-transform: uppercase;
 	font-weight: bold;
-	letter-spacing: 4px;
+	letter-spacing: .4rem;
+	padding: 10vh 0vh;
+	background-color: #f5f5f7;
 }
 
 .entry-title a {
