--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ a:visited {
 	overflow: hidden;
 	position: absolute !important;
 	width: 1px;
-	word-wrap: normal !important;
+	/*wordwrap used to be here*/
 }
 
 /*--------------------------------------------------------------
@@ -1537,7 +1537,7 @@ img#wpstats {
 	clear: both;
 	padding-top: 1em;
 	padding-bottom: 1em;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 }
 
 .entry-content::after,
@@ -1626,7 +1626,7 @@ img#wpstats {
 	padding: .3em 0 .1em;
 	font-weight: 400;
 	line-height: 1.3;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 }
 
 .entry-title.singular-title {
@@ -3491,7 +3491,7 @@ a.staticslider-button + a.staticslider-button,
 	line-height: 1.3;
 	text-align: center;
 	text-transform: uppercase;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 	color: #FFF;
 	opacity: 0;
 	-webkit-transform: translateY(-50%);
@@ -4112,7 +4112,7 @@ a.comment-edit-link:hover {}
 	display: block;
 	float: none;
 	margin-bottom: 0.5em;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 }
 
 .widget-title {
@@ -4129,7 +4129,7 @@ a.comment-edit-link:hover {}
 .widget-area a:link,
 .widget-area a:visited {
 	text-decoration: none;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 }
 
 .widget-area a:active,
@@ -4489,7 +4489,7 @@ ul.cryout-wposts li:last-child {
 .cryout-wtab .tab-item-comment,
 .cryout-wposts .post-item-title {
 	margin: 5px 0;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 }
 
 .cryout-wposts .post-item-title {
@@ -5528,7 +5528,7 @@ body .jetpack-portfolio-shortcode,
 	line-height: 1.3;
 	text-align: center;
 	text-transform: uppercase;
-	word-wrap: break-word;
+	/*wordwrap used to be here*/
 	color: #FFF;
 	opacity: 0;
 	-webkit-transform: translateY(-50%);
@@ -6498,7 +6498,7 @@ body.mobile .main {min-height:0;}
 	.cryout p a::after {
 		content: " (" attr(href) ")";
 		font-size: 80%;
-		word-wrap: break-word;
+		/*wordwrap used to be here*/
 	}
 
 	.cryout .entry-title,
