--- a/style.css
+++ b/style.css
@@ -1622,7 +1622,7 @@ img#wpstats {
 }
 
 h1.entry-title {
-	margin: 0vw -50vw;
+	margin: -3vh -50vw;
 	font-weight: 400;
 	line-height: 1.3;
 	word-wrap: break-word;
@@ -1630,7 +1630,7 @@ h1.entry-title {
 	text-transform: uppercase;
 	font-weight: bold;
 	letter-spacing: .4rem;
-	padding: 10vh 0vh;
+	padding: 15vh 0vw;
 	background-color: #f5f5f7;
 }
 
