--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -365,6 +365,6 @@ ul.directory-list.filterable {
 }
 
 /*adding underline to research areas list on profiles*/
-.research_areas_list{
+.research_areas_list a{
 	text-decoration:underline;
 }
