--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -233,18 +233,14 @@ ul.directory-list.filterable {
 	height: 150px;
 	width: 100%;
     }
-    /* .image-container img.directory-portrait {
-        height: 230%;
-    } */
 }
-/* .directory ul.directory-list li .image-container {
-  border-width: 4px;
-  border-style: solid;
-} */
+
 .directory ul.directory-list li .content .link.phone {
     color: #0062B8;
 }
-
+.directory ul.directory-list li .content .link.email {
+    color: #0062B8;
+}
 .directory-list .filterable-item .content h5 {
 	color: #333;
 	font-size: 17px;
