--- a/style.css
+++ b/style.css
@@ -6904,64 +6904,6 @@ h3.odhBoxTitles{
 }
 
 
-/*Testing Lab page odh box styles*/
-/***********************/
-
-.odhBoxTextBoxesTL{
-        position: relative;
-        width: 100%;
-        height: 400px;
-
-}
-.odhTL0{
-        left: -2%;
-}
-.odhTL1{
-        left: 32%;
-}
-.odhTL2{
-        left: 66%;
-}
-
-
-.odhBoxContentTL{
-        position: absolute;
-        width: 345px;
-        height: 270px;
-        background-color: white;
-        box-shadow: 8px 12px 18px #969595c2;
-        margin: 20px;
-}
-.odhBoxContentTL:hover{
-        background-color:rgba(0, 0, 0, .05);
-}
-.odhBoxInnerTL {
-        text-align: center;
-        padding: 20px;
-}
-.odhBoxInnerTL a{
-        width: 100%;
-        height: 100%;
-        text-decoration: none;
-}
-
-h3.odhBoxTitlesTL{
-        color: #141414;
-        font-size: 19px;
-}
-#odhFirstTitle{
-        color:#141414;
-}
-.odhBoxTextTL{
-        font-size: 14px;
-        position: relative;
-        width: 315px;
-        left: -2%;
-}
-
-
-
-
 /*large screen*/
 @media (max-width: 1025px){
 	.odhBoxTextBoxes{
@@ -6985,24 +6927,6 @@ h3.odhBoxTitlesTL{
 		top: 65%;
 		left: 29%;
 	}
-}
-
-
-/*large screen for testing lab page*/
-@media screen and (max-width: min-width:500px){
-        .odhBoxTextBoxesTL{
-                height: 600px;
-        }
-        .odhTL0{
-                left: 7%;
-        }
-        .odhTL1{
-                left: 52%;
-        }
-        .odhTL2{
-                top: 33%;
-                left: 7%;
-        }
 }
 
 
@@ -7030,25 +6954,6 @@ h3.odhBoxTitlesTL{
 		left: 19%;		
 	}
 }
-
-
-/*half-screen for testing page*/
-@media (max-width: 768px){
-        .odhBoxTextBoxesTL{
-                height: 600px;
-        }
-        .odhTL0{
-                left: -7%;
-        }
-        .odhTL1{
-                left: 48%;
-        }
-        .odhTL2{
-                top: 50%;
-                left: -7%;
-        }
-}
-
 
 
 /*smaller screens*/
@@ -7088,41 +6993,6 @@ h3.odhBoxTitlesTL{
 	}
 }
 
-
-/*smaller screens for testing lab page*/
-@media (max-width: 426px){
-        .odhBoxTextBoxesTL{
-                height: 750px;
-        }
-        .odhBoxContentTL{
-                width: 295px;
-                height: 200px;
-        }
-        h3.odhBoxTitlesTL{
-                font-size: 16px;
-        }
-        .odhBoxTextTL{
-                font-size: 11px;
-                width: 265px;
-        }
-        .odhTL0{
-                left: 3%;
-        }
-        .odhTL1{
-                top: 30%;
-                left: 3%;
-        }
-        .odhTL2{
-                top: 60%;
-                left: 3%;
-        }
-}
-
-
-
-
-
-
 @media (max-width: 376px){
 	.odhM0{
 		left: -5%;
@@ -7140,24 +7010,6 @@ h3.odhBoxTitlesTL{
 		left: -5%;
 	}
 }
-
-
-/* for testing lab page*/
-
-
-@media (max-width: 376px){
-
-        .odhTL0{
-                left: -5%;
-        }
-        .odhTL1{
-                left: -5%;
-        }
-        .odhTL2{
-                left: -5%;
-        }
-}
-
 
 
 @media (max-width: 321px){
@@ -7181,26 +7033,72 @@ h3.odhBoxTitlesTL{
 	}
 }
 
-/* for testing lab page*/
 
-@media (max-width: 321px){
-        .odhBoxContentTL{
-                width: 285px;
-        }
-        .odhTL0{
-                left: -12%;
-        }
-        .odhTL1{
-                left: -12%;
-        }
-        .odhTL2{
-                left: -12%;
-        }
+/******************************/
+/* Style for testing lab page */
+/******************************/
+
+.odhBoxTextBoxesTL{
+display:grid;
+grid-template-columns: 1fr;
+justify-content:center;
+grid-gap:2rem;
+margin:2rem;
+}
+
+.odhBoxContentTL{
+        position: relative;
+        width: 345px;
+        height: 300px;
+        background-color: white;
+        box-shadow: 8px 12px 18px #969595c2;
+}
+.odhBoxContentTL:hover{
+        background-color:rgba(0, 0, 0, .05);
+}
+.odhBoxInnerTL {
+        text-align: center;
+        padding: 20px;
+}
+.odhBoxInnerTL a{
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+}
+
+h3.odhBoxTitlesTL{
+        color: #141414;
+        font-size: 19px;
+}
+#odhFirstTitleTL{
+        color:#141414;
+}
+.odhBoxTextTL{
+        font-size: 14px;
+        position: relative;
+        width: 315px;
+        left: -2%;
 }
 
 
+/*************************************************/
+/* Style for testing lab page on tablet and phone*/
+/*************************************************/
+
+@media screen and (min-width:600px){
+        .odhBoxTextBoxesTL{
+                grid-template-columns: repeat(2, 1fr);
+
+                }
+        }
 
 
+@media screen and (min-width:780px){
+        .odhBoxTextBoxesTL{
+                grid-template-columns: repeat(3, 1fr);
+
+                        }
+                }
 
 
 /***********************/
