--- a/style.css
+++ b/style.css
@@ -7027,6 +7027,78 @@ h3.odhBoxTitles{
 		left: -12%;
 	}
 }
+
+
+
+/******************************/
+/* Style for testing lab page */
+/******************************/
+
+.odhBoxTextBoxesTL{
+display:grid;
+grid-template-columns: 1fr;
+justify-content:center;
+grid-gap:2rem;
+margin:2rem;
+}
+
+.odhBoxContentTL{
+        position: relative;
+        width: 345px;
+        height: 300px;
+        background-color: white;
+        box-shadow: 8px 12px 18px #969595c2;
+}
+.odhBoxContentTL:hover{
+        background-color:rgba(0, 0, 0, .05);
+}
+.odhBoxInnerTL {
+        text-align: center;
+        padding: 20px;
+}
+.odhBoxInnerTL a{
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+}
+
+h3.odhBoxTitlesTL{
+        color: #141414;
+        font-size: 19px;
+}
+#odhFirstTitleTL{
+        color:#141414;
+}
+.odhBoxTextTL{
+        font-size: 14px;
+        position: relative;
+        width: 315px;
+        left: -2%;
+}
+
+
+
+/*************************************************/
+/* Style for testing lab page on tablet and phone*/
+/*************************************************/
+
+@media screen and (min-width:600px){
+        .odhBoxTextBoxesTL{
+                grid-template-columns: repeat(2, 1fr);
+
+                }
+        }
+
+
+@media screen and (min-width:780px){
+        .odhBoxTextBoxesTL{
+                grid-template-columns: repeat(3, 1fr);
+
+                        }
+                }
+
+
+
 /***********************/
 /*End of custom home page css*/
 /***********************/
