--- a/style.css
+++ b/style.css
@@ -6904,63 +6904,6 @@ h3.odhBoxTitles{
 }
 
 
-/*Testing Lab page odh box styles*/
-/***********************/
-
-.odhBoxTextBoxesTL{
-        position: relative;
-        width: 100%;
-        height: 400px;
-
-}
-.odhTL0{
-        left: -2%;
-}
-.odhTL1{
-        left: 32%;
-}
-.odhTL2{
-        left: 66%;
-}
-
-
-.odhBoxContentTL{
-        position: absolute;
-        width: 345px;
-        height: 270px;
-        background-color: white;
-        box-shadow: 8px 12px 18px #969595c2;
-        margin: 20px;
-}
-.odhBoxContentTL:hover{
-        background-color:rgba(0, 0, 0, .05);
-}
-.odhBoxInnerTL {
-        text-align: center;
-        padding: 20px;
-}
-.odhBoxInnerTL a{
-        width: 100%;
-        height: 100%;
-        text-decoration: none;
-}
-
-h3.odhBoxTitlesTL{
-        color: #141414;
-        font-size: 19px;
-}
-#odhFirstTitle{
-        color:#141414;
-}
-.odhBoxTextTL{
-        font-size: 14px;
-        position: relative;
-        width: 315px;
-        left: -2%;
-}
-
-
-
 
 /*large screen*/
 @media (max-width: 1025px){
@@ -6988,23 +6931,6 @@ h3.odhBoxTitlesTL{
 }
 
 
-/*large screen for testing lab page*/
-@media screen and (max-width: min-width:500px){
-        .odhBoxTextBoxesTL{
-                height: 600px;
-        }
-        .odhTL0{
-                left: 7%;
-        }
-        .odhTL1{
-                left: 52%;
-        }
-        .odhTL2{
-                top: 33%;
-                left: 7%;
-        }
-}
-
 
 /*half-screen*/
 @media (max-width: 768px){
@@ -7030,25 +6956,6 @@ h3.odhBoxTitlesTL{
 		left: 19%;		
 	}
 }
-
-
-/*half-screen for testing page*/
-@media (max-width: 768px){
-        .odhBoxTextBoxesTL{
-                height: 600px;
-        }
-        .odhTL0{
-                left: -7%;
-        }
-        .odhTL1{
-                left: 48%;
-        }
-        .odhTL2{
-                top: 50%;
-                left: -7%;
-        }
-}
-
 
 
 /*smaller screens*/
@@ -7089,40 +6996,6 @@ h3.odhBoxTitlesTL{
 }
 
 
-/*smaller screens for testing lab page*/
-@media (max-width: 426px){
-        .odhBoxTextBoxesTL{
-                height: 750px;
-        }
-        .odhBoxContentTL{
-                width: 295px;
-                height: 200px;
-        }
-        h3.odhBoxTitlesTL{
-                font-size: 16px;
-        }
-        .odhBoxTextTL{
-                font-size: 11px;
-                width: 265px;
-        }
-        .odhTL0{
-                left: 3%;
-        }
-        .odhTL1{
-                top: 30%;
-                left: 3%;
-        }
-        .odhTL2{
-                top: 60%;
-                left: 3%;
-        }
-}
-
-
-
-
-
-
 @media (max-width: 376px){
 	.odhM0{
 		left: -5%;
@@ -7140,24 +7013,6 @@ h3.odhBoxTitlesTL{
 		left: -5%;
 	}
 }
-
-
-/* for testing lab page*/
-
-
-@media (max-width: 376px){
-
-        .odhTL0{
-                left: -5%;
-        }
-        .odhTL1{
-                left: -5%;
-        }
-        .odhTL2{
-                left: -5%;
-        }
-}
-
 
 
 @media (max-width: 321px){
@@ -7202,6 +7057,12 @@ margin:2rem;
         box-shadow: 8px 12px 18px #969595c2;
 }
 
+/**
+.odhBoxContentTL:hover{
+        background-color:rgba(0, 0, 0, .05);
+}
+
+**/
 
 .odhBoxInnerTL {
         text-align: center;
@@ -7229,42 +7090,24 @@ h3.odhBoxTitlesTL{
 
 
 .button {
-	background-color: white; 
+        background-color: white;
         border: 2px solid #0057b8;
         color: black;
         padding: 10px 20px;
-	border-radius: 4px;
+        border-radius: 4px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
         font-size: 14px;
         margin: 4px 2px;
-	transition-duration: 0.4s;
+        transition-duration: 0.4s;
         cursor: pointer;
       }
 
 .button:hover {
-	background-color: #0057b8;
-	color: white !important;
+        background-color: #0057b8;
+        color: white !important;
 }
-
-/* for testing lab page*/
-
-@media (max-width: 321px){
-        .odhBoxContentTL{
-                width: 285px;
-        }
-        .odhTL0{
-                left: -12%;
-        }
-        .odhTL1{
-                left: -12%;
-        }
-        .odhTL2{
-                left: -12%;
-        }
-}
-
 
 
 /*************************************************/
@@ -7285,7 +7128,6 @@ h3.odhBoxTitlesTL{
 
                         }
                 }
-
 
 
 /***********************/
