fixed typo of frist to first

--- a/style.css
+++ b/style.css
@@ -6996,7 +6996,7 @@ h3.odhBoxTitlesTL{
     text-decoration: none;
     font-size: 14px;
 }
-h3.odhFristTitle{
+h3.odhFirstTitle{
     margin-bottom: 20px;
 }
 #odhBoxTitle{
