text preview styles

--- a/style.css
+++ b/style.css
@@ -6822,6 +6822,16 @@ h3.odhFirstTitle{
 
 #odhBoxDescription{
 	color: #141414;
+	display: block;
+    display: -webkit-box;
+    font-size: 14px;
+    line-height: 1.4;
+    height: 58.8; /* line-height * font-size * num-lines */
+    -webkit-line-clamp: 3; /* num-lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 .odhBoxInfo{
     display: flex;
